--- a/src/app/components/search-filter/search-filter.component.html
+++ b/src/app/components/search-filter/search-filter.component.html
@@ -6,42 +6,51 @@
             </button>
             <h2>Filter search</h2>
         </div>
+
         <div class="filter-content">
-            <h3>Genres</h3>
-            <mat-checkbox 
-                class="all-genres-checkbox"         
-                (change)="checkAllGenres()"
-                [(ngModel)]="checkedAllGenres">
-                All
-            </mat-checkbox>
-            <div *ngIf="allGenres" class="genre-selector">
-                <div *ngFor="let item of allGenres | keyvalue; let i = index">
-                    <mat-checkbox 
-                        class="genre-checkbox"
-                        [(ngModel)]="checkedGenres[i]">
-                        {{ item.value.name }}
-                    </mat-checkbox>
-                </div>
-            </div>
-            <br>
-            <h3>Offices</h3>
-            <mat-checkbox 
-                class="all-offices-checkbox"         
-                (change)="checkAllOffices()"
-                [(ngModel)]="checkedAllOffices">
-                All
-            </mat-checkbox>
-            <div *ngIf="allOffices" class="office-selector">
-                <div *ngFor="let item of allOffices | keyvalue; let i = index">
-                    <mat-checkbox 
-                        class="office-checkbox"
-                        [(ngModel)]="checkedOffices[i]">
-                        {{ item.value.name }}
-                    </mat-checkbox>
-                </div>
-            </div>
-            <br>
-            <button mat-stroked-button (click)="saveFilter()">Save</button>
+
+          <mat-checkbox class="genre-checkbox"
+                        [(ngModel)]="hideIncompleteChants">
+            Hide incomplete chants
+          </mat-checkbox>
+
+          <h3>Genres</h3>
+          <mat-checkbox
+              class="all-genres-checkbox"
+              (change)="checkAllGenres()"
+              [(ngModel)]="checkedAllGenres">
+              All
+          </mat-checkbox>
+          <div *ngIf="allGenres" class="genre-selector">
+              <div *ngFor="let item of allGenres | keyvalue; let i = index">
+                  <mat-checkbox
+                      class="genre-checkbox"
+                      [(ngModel)]="checkedGenres[i]">
+                      {{ item.value.name }}
+                  </mat-checkbox>
+              </div>
+          </div>
+          <br>
+
+          <h3>Offices</h3>
+          <mat-checkbox
+              class="all-offices-checkbox"
+              (change)="checkAllOffices()"
+              [(ngModel)]="checkedAllOffices">
+              All
+          </mat-checkbox>
+          <div *ngIf="allOffices" class="office-selector">
+              <div *ngFor="let item of allOffices | keyvalue; let i = index">
+                  <mat-checkbox
+                      class="office-checkbox"
+                      [(ngModel)]="checkedOffices[i]">
+                      {{ item.value.name }}
+                  </mat-checkbox>
+              </div>
+          </div>
+          <br>
+
+          <button mat-stroked-button (click)="saveFilter()">Save</button>
         </div>
     </div>
     <div *ngIf="!visible">
