Started abstracting out the "alpiano" format (that is, aligned volpiano strings coming out of MAFFT).
Added relative distance computation and used it for the distance matrix.

Improved distance matrix button UI.

Applied some TSLint autofixes

--- a/src/app/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/components/distance-matrix/distance-matrix.component.html
@@ -4,7 +4,7 @@
     <tr class="distance-matrix" *ngFor="let name1 of names">
       <td class="distance-matrix-header-column">{{ name1 }}</td>
       <td class="distance-matrix" *ngFor="let name2 of names">
-        {{ allDistances.get(name1).get(name2) }}
+        {{ allDistances.get(name1).get(name2).toFixed(2) }}
       </td>
     </tr>
   </table>
