--- a/src/app/components/aligned/aligned.component.css
+++ b/src/app/components/aligned/aligned.component.css
@@ -21,6 +21,11 @@
     width: fit-content;
 }
 
+.control-button {
+  margin: 20px;
+  width: fit-content;
+}
+
 .scrollable {
     min-height: 100%;
     min-width: 100%;
@@ -70,7 +75,29 @@ div.display-controls {
 }
 
 div.distance-matrix-wrapper {
-  display: inline;
-  float: right;
-  margin-right: 120px;
+  position: absolute;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  left: 0;
+  right: 0;
+  /*display: inline;*/
+  /*float: right;*/
+}
+
+div.widget-control {
+  display: inline-block;
+}
+
+ul.widget-control {
+  list-style: none;
+}
+
+.widget-control-button {
+  width: fit-content;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
