--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -23,7 +23,7 @@
 <!--        Conservation of chant set: {{ conservationOfSet }}-->
 <!--      </span>-->
       <br>
-      <button mat-raised-button (click)="downloadAligned()" color="primary" class="download-button">Download</button>
+<!--      <button mat-raised-button (click)="downloadAligned()" color="primary" class="download-button">Download</button>-->
     </div>
 
     <div class="mode-selector">
@@ -34,11 +34,12 @@
       </mat-button-toggle-group>
     </div>
 
-
-    <div class="distance-matrix-wrapper">
-      <app-distance-matrix
-        [allDistances]="computeDistances()"
-        [names]="aligned.success.urls"></app-distance-matrix>
+    <div class="widget-control">
+      <ul class="widget-control">
+        <li><button mat-raised-button (click)="downloadAligned()" color="primary" class="widget-control-button">Download</button></li>
+        <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
+                class="widget-control-button">Distance Matrix</button></li>
+      </ul>
     </div>
 
   </div>
@@ -111,4 +112,11 @@
             <mat-spinner></mat-spinner>
         </div>
     </ng-template>
+
+  <div *ngIf="showDistanceMatrix" class="distance-matrix-wrapper">
+    <app-distance-matrix
+      [allDistances]="computeDistances()"
+      [names]="aligned.success.urls"></app-distance-matrix>
+  </div>
+
 </div>
