--- a/src/app/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/components/distance-matrix/distance-matrix.component.html
@@ -3,7 +3,8 @@
   <table class="distance-matrix">
     <tr class="distance-matrix" *ngFor="let name1 of names">
       <td class="distance-matrix-header-column">{{ name1 }}</td>
-      <td class="distance-matrix" *ngFor="let name2 of names">
+      <td class="distance-matrix" *ngFor="let name2 of names"
+          style="background-color: rgb({{ backgroundColorRGB(allDistances.get(name1).get(name2)) }})">
         {{ allDistances.get(name1).get(name2).toFixed(2) }}
       </td>
     </tr>
