--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,12 +6,13 @@
         <a mat-button [routerLink]="'/chants'"> Chant list </a>
         <a mat-button [routerLink]="'/upload'"> Upload data </a>
         <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
+        <a mat-button [routerLink]="'/settings'"> Settings </a>
     </div>
     <div>
         <mat-form-field floatLabel=never class="searchBar">
             <mat-icon matPrefix>search</mat-icon>
-            <input type="search" 
-                (keyup.enter)="search($event)" 
+            <input type="search"
+                (keyup.enter)="search($event)"
                 placeholder="Search incipit"
                 [value]="searchValue"
                 matInput>
