--- a/src/app/components/data-upload/data-upload.component.css
+++ b/src/app/components/data-upload/data-upload.component.css
@@ -1,11 +1,20 @@
-.upload-container {
-    width: 100%;
-    height: 90%;
-    display: flex;
-    align-items: center;
+.data-management-container {
+  /*width: 100%;*/
+  /*height: 90%;*/
+  display: flex;
+  align-items: center;
 }
 
 .upload-content {
-    width: fit-content;
-    margin: auto;
+  width: fit-content;
+  /*margin: auto;*/
+  margin: 20px;
+  display: block;
+}
+
+.selection-content {
+  width: fit-content;
+  /*margin: auto;*/
+  margin: 20px;
+  display: block;
 }
