--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -4,7 +4,7 @@
             <mat-icon >home</mat-icon>
         </button>
         <a mat-button [routerLink]="'/chants'"> Chant list </a>
-        <a mat-button [routerLink]="'/upload'"> Upload data </a>
+        <a mat-button [routerLink]="'/upload'"> Manage data </a>
         <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
         <a mat-button [routerLink]="'/settings'"> Settings </a>
     </div>
