Re #2: Filtering by sources (fontes) now possible.

--- a/src/app/components/search-filter/search-filter.component.css
+++ b/src/app/components/search-filter/search-filter.component.css
@@ -4,12 +4,12 @@
     margin-top: 30px;
 }
 
-.genre-selector, .office-selector {
+.genre-selector, .office-selector, .fontes-selector {
     display: flex;
     flex-wrap: wrap;
 }
 
-.genre-checkbox, .office-checkbox {
+.genre-checkbox, .office-checkbox, .fontes-checkbox {
     margin-left: 10px;
 }
 
