--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -16,6 +16,10 @@
       [(ngModel)]="settingsService.alignmentSettingsService.useTextSeparators">
       Use word separators when performing alignment
     </mat-checkbox>
+    <mat-checkbox class="settings-item-active-element"
+                  [(ngModel)]="settingsService.alignmentSettingsService.distanceMatrixUseAbsoluteDistances">
+      Use absolute distances in distance matrix computation (not recommended for most uses)
+    </mat-checkbox>
   </mat-card-content>
 </mat-card>
 
