--- a/src/app/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/components/distance-matrix/distance-matrix.component.html
@@ -1,14 +1,27 @@
 <mat-card cdkDrag class="distance-matrix-card">
   <h3 align="center">Distance matrix</h3>
+
   <table class="distance-matrix">
+    <tr class="distance-matrix-header-row">
+      <td class="distance-matrix-top-left-cell"></td>
+      <td class="distance-matrix-header-cell" *ngFor="let shortName of shortNames">
+        {{ shortName }}
+      </td>
+    </tr>
     <tr class="distance-matrix" *ngFor="let name1 of names">
       <td class="distance-matrix-header-column">{{ name1 }}</td>
       <td class="distance-matrix distance-matrix-cell"
           *ngFor="let name2 of names"
           style="background-color: rgb({{ backgroundColorRGB(allDistances.get(name1).get(name2)) }})"
-          (click)="showCell(name1, name2)"
+          (click)="selectCell(name1, name2)"
+          (mousedown)="showCellName(name1, name2)"
+          (mouseup)="hideCellName(name1, name2)"
       >
         {{ allDistances.get(name1).get(name2).toFixed(2) }}
+        <div class="distance-matrix-cell-name"
+             *ngIf="showCellNames.get(name1).get(name2)">
+          {{ name1 }} <br> {{ name2 }}
+        </div>
       </td>
     </tr>
   </table>
