Re #9: Basic capabilities for saving alignments (to local storage) and deleting saved alignments is now available. Saving alignments can be done from the AlignedComponent, and a new "Manage alignments" page is available.
What is missing is the ability to select an alignment on the Manage alignments page and have it shown.

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,6 +5,7 @@
         </button>
         <a mat-button [routerLink]="'/chants'"> Chant list </a>
         <a mat-button [routerLink]="'/upload'"> Manage data </a>
+        <a mat-button [routerLink]="'/alignment-manager'"> Manage alignments </a>
         <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
         <a mat-button [routerLink]="'/settings'"> Settings </a>
     </div>
