--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -38,7 +38,8 @@
       <ul class="widget-control">
         <li><button mat-raised-button (click)="downloadAligned()" color="primary" class="widget-control-button">Download</button></li>
         <li><button mat-raised-button (click)="doShowDistanceMatrix()" color="{{ showDistanceMatrixColor }}"
-                class="widget-control-button">Distance Matrix</button></li>
+                    class="widget-control-button">Distance Matrix</button></li>
+        <li><button mat-raised-button (click)="saveAlignment()" color="primary" class="widget-control-button">Save</button></li>
       </ul>
     </div>
 
