Re #9: Alignments can now be requested via /align/NAME URL.
Alignment manager component now supports navigating to the first selected alignment.

Available alignments in the AlignmentManagementService now computed directly from local storage keys -- slightly inefficient, could be a variable populated upon construction and then kept updated through insertion/delete/rename operations.

--- a/src/app/components/alignment-manager/alignment-list/alignment-list.component.html
+++ b/src/app/components/alignment-manager/alignment-list/alignment-list.component.html
@@ -1,5 +1,9 @@
 <div class="alignment-list">
   <div *ngFor="let alignment of availableAlignments; let i = index">
-    <mat-checkbox [(ngModel)]="selectedAlignments[i]">{{ alignment }}</mat-checkbox>
+    <mat-checkbox class="alignment-checkbox" [(ngModel)]="selectedAlignments[i]">{{ alignment }}</mat-checkbox>
+    <button mat-flat-button color="secondary" (click)="requestShowAlignment(alignment)"
+            class="alignment-action-button">
+      <mat-icon>search</mat-icon>
+    </button>
   </div>
 </div>
