--- a/src/app/components/aligned/aligned.component.css
+++ b/src/app/components/aligned/aligned.component.css
@@ -103,3 +103,9 @@ ul.widget-control {
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
+.alignment-scroll-viewport {
+  width: 100%;
+  height: 600px;
+  border: 1px solid blue;
+}
