Re #5: Show a simple network graph for alignment.

--- a/src/app/components/aligned/aligned.component.html
+++ b/src/app/components/aligned/aligned.component.html
@@ -1,5 +1,7 @@
 <div class="alignment">
 
+  <app-network-graph [distanceMatrix]="computeDistances()"></app-network-graph>
+
   <div class="controls-wrapper">
     <!-- Display controls and download -->
 
